<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:background="@drawable/blue_bg">

            <ImageView
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:layout_marginTop="93dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_dua"/>

        </FrameLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginRight="62dp"
            android:layout_marginTop="36.7dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <!-- INPUT -->
            <EditText
                android:id="@+id/et_username"
                android:layout_toRightOf="@+id/username_icon"
                android:hint="Username"
                android:textSize="16sp"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/cursor_color"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- ICON -->
            <ImageView
                android:id="@+id/username_icon"
                android:src="@drawable/user"
                android:layout_width="14.7dp"
                android:layout_height="10.3dp"
                android:layout_marginLeft="17dp"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginRight="62dp"
            android:layout_marginTop="12.7dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <!-- INPUT -->
            <EditText
                android:id="@+id/et_password"
                android:layout_toRightOf="@+id/icon"
                android:hint="Password"
                android:textSize="16sp"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:maxLines="1"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:maxLength="10"
                android:textCursorDrawable="@drawable/cursor_color"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- ICON -->
            <ImageView
                android:id="@+id/icon"
                android:src="@drawable/password"
                android:layout_width="14.7dp"
                android:layout_height="10.3dp"
                android:layout_marginLeft="17dp"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:layout_marginLeft="62dp"
            android:layout_marginRight="62dp"
            android:layout_marginTop="18.7dp"
            android:layout_marginBottom="16dp"
            android:text="Login"
            android:background="@drawable/blue_fill__rounded_color"
            />


    </LinearLayout>

</RelativeLayout>
</ScrollView>